--- a/Ch1_Degradation_abcoverNMDS.Rmd
+++ b/Ch1_Degradation_abcoverNMDS.Rmd
@@ -24,7 +24,10 @@ library(janitor)
 library(calecopal) 
 library(multcompView)
 library(plotly)
-library(ggvegan)
+if (!require(devtools)) {
+  install.packages("devtools")
+}
+devtools::install_github("gavinsimpson/ggvegan")
 ```
 
 ```{r load csv}
@@ -50,10 +53,12 @@ class(abcover_full_raw) # now a tibble
 ```{r ab percent cover reorder classes to Intact Matrix Degraded}
 abcover_full_v <- abcover_full_raw %>%
   mutate(standtype = fct_relevel(standtype, 
-            "intact", "enhancement", "degraded")) 
+            "intact", "matrix", "degraded")) 
+unique(abcover_full_v$standtype)
 
 # renaming observations
-abcover_full_v$standtype <- factor(abcover_full_v$standtype, levels=c("intact", "enhancement", "degraded"), labels=c("Intact", "Matrix", "Degraded"))
+abcover_full_v$standtype <- factor(abcover_full_v$standtype, levels=c("intact", "matrix", "degraded"), labels=c("Intact", "Matrix", "Degraded"))
+unique(abcover_full_v$standtype)
 
 ```
 
@@ -102,6 +107,30 @@ unique(abcover_byspecies$species)
 
 ```
 
+(6) Prepare data for an NMDS (percent cover x species x standtype)
+```{r transpose percent cover data by species, include=TRUE}
+
+# use this for GROUPS: abcover_byspecies_nmdsprep
+
+abcover_byspecies_nmdsprep <- abcover_byspecies %>% 
+  tidyr::spread(species, percentcover) %>% # transpose data so columns are species
+  replace(is.na(.), 0) # replace NA with zeros
+
+view(abcover_byspecies_nmdsprep)
+# 15 sites (rows) by 48 columns
+str(abcover_byspecies_nmdsprep)
+
+
+abcover_byspecies_nmdsprep_num <- abcover_byspecies_nmdsprep %>% 
+  # use the ungroup() function to take out grouping
+  ungroup() %>% 
+  select(!c(standtype, site, site_rep))
+# 15 sites (rows) by 33 species (columns)
+# DEG 1-6, ENH 1-6, INT 1-3 = 15 transects
+         
+view(abcover_byspecies_nmdsprep_num) # only numbers
+write.csv(abcover_byspecies_nmdsprep_num, "~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/chaparraldegradation_2022b/processed/nmds_aboveground.csv")
+```
 
 ```{r species richness by stand type}
 sppr <- specnumber(abcover_byspecies_nmdsprep_num)
@@ -143,6 +172,9 @@ plot_sppr <- ggplot(sppr_df, aes(x = standtype, y = value, fill = standtype)) +
 plot_sppr
 
 ```
+
+
+
 ```{r shannon diversity}
 # this doesn't make sense for % cover, but I could run it on shrub density. I could also run it on the seedbank data. 
 shannondiv <- diversity(abcover_byspecies_nmdsprep_num)
@@ -155,32 +187,6 @@ summary(sppdiv_aov)
 #standtype    2 0.2899 0.14493   3.924 0.0489 *
 #Residuals   12 0.4433 0.03694        
 
-```
-
-
-(6) Prepare data for an NMDS (percent cover x species x standtype)
-```{r transpose percent cover data by species, include=TRUE}
-
-# use this for GROUPS: abcover_byspecies_nmdsprep
-
-abcover_byspecies_nmdsprep <- abcover_byspecies %>% 
-  tidyr::spread(species, percentcover) %>% # transpose data so columns are species
-  replace(is.na(.), 0) # replace NA with zeros
-
-
-
-view(abcover_byspecies_nmdsprep)
-# 15 sites (rows) by 37 columns
-
-abcover_byspecies_nmdsprep_num <- abcover_byspecies_nmdsprep %>% 
-  # use the ungroup() function to take out grouping
-  ungroup() %>% 
-  select(!c(standtype, site, site_rep, standtype_ID))
-# 15 sites (rows) by 33 species (columns)
-# DEG 1-6, ENH 1-6, INT 1-3 = 15 transects
-         
-view(abcover_byspecies_nmdsprep_num) # only numbers
-write.csv(abcover_byspecies_nmdsprep_num, "~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/chaparraldegradation_2022b/processed/nmds_aboveground.csv")
 ```
 
 NMDS 
